[package]
name = "turbopipe"
version = "2.0.0"
edition = "2024"

[lib]
name = "turbopipe"
path = "turbopipe/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
once_cell = "1.21.3"
pyo3 = "0.26.0"

[profile.release]
codegen-units = 1
strip = true
lto = "fat"
