[project.urls]
GitHub    = "https://github.com/BrokenSource/TurboPipe"
Changelog = "https://brokensrc.dev/about/changelog"
Funding   = "https://brokensrc.dev/about/sponsors"
Contact   = "https://brokensrc.dev/about/contact"
Homepage  = "https://brokensrc.dev"

[project]
name        = "turbopipe"
description = "🌀 Faster ModernGL Buffers inter-process data transfers for subprocesses"
authors     = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
dynamic     = ["version"]
readme      = "readme.md"
license     = "MIT"
dependencies = ["moderngl"]
requires-python = ">=3.7"

[build-system]
requires = ["meson-python", "ninja"]
build-backend = "mesonpy"

[tool.uv]
managed = false

[tool.ruff.format]
exclude = ["*"]
